[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/pixelbyte/autoloads/music/Music.gd" type="Script" id=1]
[ext_resource path="res://addons/pixelbyte/node_lib/FadeStream.gd" type="Script" id=2]

[node name="Music" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
ambient_volume_db = -8.0
music_folder = "res://audio/music-ambient"

[node name="MusicA" type="AudioStreamPlayer" parent="."]
bus = "Music"
script = ExtResource( 2 )

[node name="MusicB" type="AudioStreamPlayer" parent="."]
bus = "Music"
script = ExtResource( 2 )

[node name="AmbientA" type="AudioStreamPlayer" parent="."]
volume_db = -8.0
bus = "Ambient"
script = ExtResource( 2 )

[node name="AmbientB" type="AudioStreamPlayer" parent="."]
volume_db = -8.0
bus = "Ambient"
script = ExtResource( 2 )
